--- a/main/boards/common/sonic_wifi_config.html
+++ b/main/boards/common/sonic_wifi_config.html
@@ -3,42 +3,91 @@
 <head>
   <meta charset="UTF-8" />
   <title>小智声波配网</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
-      font-family: sans-serif;
-      background: #f5f5f5;
-      padding: 2rem;
-      text-align: center;
+      font-family: "Segoe UI", "PingFang SC", sans-serif;
+      background: #f0f2f5;
+      margin: 0;
+      padding: 2rem 1rem;
+      display: flex;
+      justify-content: center;
     }
-    input, button {
-      padding: 0.8rem;
-      font-size: 1.1rem;
-      margin: 0.5rem 0;
+    .card {
+      background: #fff;
+      padding: 2rem 1.5rem;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+      max-width: 400px;
       width: 100%;
-      max-width: 300px;
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 2rem;
     }
     label {
-      display: block;
-      margin-top: 1rem;
       font-weight: bold;
+      display: block;
+      margin: 1rem 0 0.3rem;
+    }
+    input[type="text"],
+    input[type="password"] {
+      width: 100%;
+      padding: 0.75rem;
+      font-size: 1rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+    input[type="checkbox"] {
+      margin-right: 0.5rem;
+    }
+    .checkbox-container {
+      margin-top: 1rem;
+      font-size: 0.95rem;
+    }
+    button {
+      width: 100%;
+      margin-top: 1rem;
+      padding: 0.8rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      background-color: #4a90e2;
+      color: #fff;
+      cursor: pointer;
+      transition: background-color 0.2s;
+    }
+    button:hover {
+      background-color: #357ab8;
+    }
+    button:active {
+      background-color: #2f6ea2;
     }
     audio {
-      margin-top: 1rem;
+      margin-top: 1.5rem;
       width: 100%;
+      outline: none;
     }
   </style>
 </head>
 <body>
-  <h2>📶 小智声波配网</h2>
-  <input id="ssid" placeholder="请输入WiFi名称" value="" />
-  <input id="pwd" placeholder="请输入WiFi密码" value="" />
-  <label>
-    <input type="checkbox" id="loopCheck" checked />
-    自动循环播放声波
-  </label>
-  <button onclick="generate()">🎵 生成并播放声波</button>
-  <button onclick="stopPlay()">⏹️ 停止播放</button>
-  <audio id="player" controls></audio>
+  <div class="card">
+    <h2>📶 小智声波配网</h2>
+    <label for="ssid">WiFi 名称</label>
+    <input id="ssid" type="text" value="" placeholder="请输入 WiFi 名称" />
+
+    <label for="pwd">WiFi 密码</label>
+    <input id="pwd" type="password" value="" placeholder="请输入 WiFi 密码" />
+
+    <div class="checkbox-container">
+      <label><input type="checkbox" id="loopCheck" checked /> 自动循环播放声波</label>
+    </div>
+
+    <button onclick="generate()">🎵 生成并播放声波</button>
+    <button onclick="stopPlay()">⏹️ 停止播放</button>
+    <audio id="player" controls></audio>
+  </div>
 
   <script>
     const MARK = 1800;
@@ -50,7 +99,7 @@
     let loopTimer = null;
 
     function checksum(data) {
-      return data.reduce((sum, b) => (sum + b) & 0xFF, 0);
+      return data.reduce((sum, b) => (sum + b) & 0xff, 0);
     }
 
     function toBits(byte) {
@@ -77,9 +126,9 @@
       const buffer = new Uint8Array(floatSamples.length * 2);
       for (let i = 0; i < floatSamples.length; i++) {
         const s = Math.max(-1, Math.min(1, floatSamples[i]));
-        const val = s < 0 ? s * 0x8000 : s * 0x7FFF;
-        buffer[i * 2] = val & 0xFF;
-        buffer[i * 2 + 1] = (val >> 8) & 0xFF;
+        const val = s < 0 ? s * 0x8000 : s * 0x7fff;
+        buffer[i * 2] = val & 0xff;
+        buffer[i * 2 + 1] = (val >> 8) & 0xff;
       }
       return buffer;
     }
@@ -93,14 +142,14 @@
         for (let i = 0; i < str.length; i++) wavHeader[offset + i] = str.charCodeAt(i);
       };
       const write32 = (offset, value) => {
-        wavHeader[offset] = value & 0xFF;
-        wavHeader[offset + 1] = (value >> 8) & 0xFF;
-        wavHeader[offset + 2] = (value >> 16) & 0xFF;
-        wavHeader[offset + 3] = (value >> 24) & 0xFF;
+        wavHeader[offset] = value & 0xff;
+        wavHeader[offset + 1] = (value >> 8) & 0xff;
+        wavHeader[offset + 2] = (value >> 16) & 0xff;
+        wavHeader[offset + 3] = (value >> 24) & 0xff;
       };
       const write16 = (offset, value) => {
-        wavHeader[offset] = value & 0xFF;
-        wavHeader[offset + 1] = (value >> 8) & 0xFF;
+        wavHeader[offset] = value & 0xff;
+        wavHeader[offset + 1] = (value >> 8) & 0xff;
       };
 
       writeStr(0, 'RIFF');
@@ -121,8 +170,7 @@
     }
 
     function generate() {
-      stopPlay(); // 防止重复播放
-
+      stopPlay();
       const ssid = document.getElementById('ssid').value.trim();
       const pwd = document.getElementById('pwd').value.trim();
       const dataStr = ssid + '\n' + pwd;
@@ -130,7 +178,7 @@
       const fullBytes = [...START_BYTES, ...textBytes, checksum(textBytes), ...END_BYTES];
 
       let bits = [];
-      fullBytes.forEach(b => bits = bits.concat(toBits(b)));
+      fullBytes.forEach((b) => (bits = bits.concat(toBits(b))));
 
       const floatBuf = afskModulate(bits);
       const pcmBuf = floatTo16BitPCM(floatBuf);
