add iotforce puppy board and enhanced visualization of web server

--- a/main/assets/web_browser/assets_index.html
+++ b/main/assets/web_browser/assets_index.html
@@ -295,7 +295,7 @@
         • Device will apply assets after upload
       </div>
       <div class="help-links">
-        Cần hỗ trợ thêm? Liên hệ Zalo nhóm hỗ trợ TienHuyIoT:
+        Cần hỗ trợ thêm? Liên hệ Zalo nhóm hỗ trợ Cần hỗ trợ thêm: 0355115950:
         <a
           href="https://zalo.me/g/fsyuiz890"
           target="_blank"
