upgrade new algorithms movements

--- a/fota_server/frontend/dashboard.html
+++ b/fota_server/frontend/dashboard.html
@@ -123,7 +123,7 @@
 
     <!-- Footer -->
     <footer class="bg-white/50 backdrop-blur border-t border-gray-200 py-6 text-center text-sm text-gray-500">
-        <p>&copy; 2026 Xiaozhi Project. All rights reserved.</p>
+        <p>&copy; 2026 BizGenie Project. All rights reserved.</p>
     </footer>
 
     <!-- Add Device Modal -->
